# moveit_topp

./: CMakeLists.txt  README.md  package.xml
include/moveit_topp/: moveit_topp.h  spline_fitting.h
launch/: demo.launch
scripts/: convert_joint_traj_to_pp.m  convert_waypoints_to_poly.m  display_PP.m  display_PP.m~  display_TOPP_traj.m  find_matrix_spline.m  getPPString.m  load_moveit_traj.m  simple_parameterization_original.m  splines.py
src/: demo_joint_traj_to_optimal.cpp  demo_joint_traj_to_pp.cpp  demo_pp_to_optimal.cpp  demo_traj_msg_to_optimal.cpp  moveit_topp.cpp  spline_fitting.cpp  test_joint_traj_to_pp.cpp  test_joint_traj_to_time_optimal.cpp  test_pp_to_optimal.cpp
src/demo/: demo_pp_to_optimal.cpp
