<?xml version="1.0"?>
<package>
  <name>moveit_topp</name>
  <version>0.0.1</version>
  <description>Wrapper for Time-Optimal Path Parameterization</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_topp</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_topp/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_topp/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>

</package>
